PseudoBF/PseudoBF/Parsing/grammar/output/PseudoBFParser.cs
// $ANTLR 3.3 Nov 30, 2010 12:45:30 D:\\Projects\\C#\\PseudoBF\\PseudoBF.Parsing\\PseudoBF.Parsing\\grammar\\PseudoBF.g 2011-08-04 19:35:21

// The variable 'variable' is assigned but its value is never used.
#pragma warning disable 168, 219
// Unreachable code detected.
#pragma warning disable 162


using System;
using System.Collections.Generic;
using Antlr.Runtime;
using Stack = System.Collections.Generic.Stack<object>;
using List = System.Collections.IList;
using ArrayList = System.Collections.Generic.List<object>;


using Antlr.Runtime.Tree;
using RewriteRuleITokenStream = Antlr.Runtime.Tree.RewriteRuleTokenStream;

namespace  PseudoBF.Parsing 
{
[System.CodeDom.Compiler.GeneratedCode("ANTLR", "3.3 Nov 30, 2010 12:45:30")]
[System.CLSCompliant(false)]
public partial class PseudoBFParser : Antlr.Runtime.Parser
{
	internal static readonly string[] tokenNames = new string[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "PROGRAM_IMAG", "BLOCK_IMAG", "SUBROUTINE_IMAG", "LOCALS_IMAG", "VARS_IMAG", "CALL_IMAG", "OPERATOR_CALL_IMAG", "ASSIGN_IMAG", "RETURN_IMAG", "NUMBER_IMAG", "VARIABLE_IMAG", "IF_IMAG", "ELSE_IMAG", "WHILE_IMAG", "STRING_IMAG", "VALUES_IMAG", "PRINT_IMAG", "ID", "FUNCTION_KW", "PROCEDURE_KW", "LOCALS_KW", "IF_KW", "ELSE_KW", "WHILE_KW", "OPERATOR", "NUMBER", "RETURN_KW", "PRINT_KW", "STRING", "CHAR", "IDCHAR", "DIGIT", "UNDERSCORE", "WHITESPACE", "'('", "')'", "','", "':'", "'{'", "';'", "'}'", "'='"
	};
	public const int EOF=-1;
	public const int T__38=38;
	public const int T__39=39;
	public const int T__40=40;
	public const int T__41=41;
	public const int T__42=42;
	public const int T__43=43;
	public const int T__44=44;
	public const int T__45=45;
	public const int PROGRAM_IMAG=4;
	public const int BLOCK_IMAG=5;
	public const int SUBROUTINE_IMAG=6;
	public const int LOCALS_IMAG=7;
	public const int VARS_IMAG=8;
	public const int CALL_IMAG=9;
	public const int OPERATOR_CALL_IMAG=10;
	public const int ASSIGN_IMAG=11;
	public const int RETURN_IMAG=12;
	public const int NUMBER_IMAG=13;
	public const int VARIABLE_IMAG=14;
	public const int IF_IMAG=15;
	public const int ELSE_IMAG=16;
	public const int WHILE_IMAG=17;
	public const int STRING_IMAG=18;
	public const int VALUES_IMAG=19;
	public const int PRINT_IMAG=20;
	public const int ID=21;
	public const int FUNCTION_KW=22;
	public const int PROCEDURE_KW=23;
	public const int LOCALS_KW=24;
	public const int IF_KW=25;
	public const int ELSE_KW=26;
	public const int WHILE_KW=27;
	public const int OPERATOR=28;
	public const int NUMBER=29;
	public const int RETURN_KW=30;
	public const int PRINT_KW=31;
	public const int STRING=32;
	public const int CHAR=33;
	public const int IDCHAR=34;
	public const int DIGIT=35;
	public const int UNDERSCORE=36;
	public const int WHITESPACE=37;

	// delegates
	// delegators

	#if ANTLR_DEBUG
		private static readonly bool[] decisionCanBacktrack =
			new bool[]
			{
				false, // invalid decision
				false, false, false, false, false, false, false, false, false, false, 
				false
			};
	#else
		private static readonly bool[] decisionCanBacktrack = new bool[0];
	#endif
	public PseudoBFParser( ITokenStream input )
		: this( input, new RecognizerSharedState() )
	{
	}
	public PseudoBFParser(ITokenStream input, RecognizerSharedState state)
		: base(input, state)
	{
		ITreeAdaptor treeAdaptor = null;
		CreateTreeAdaptor(ref treeAdaptor);
		TreeAdaptor = treeAdaptor ?? new CommonTreeAdaptor();

		OnCreated();
	}
		
	// Implement this function in your helper file to use a custom tree adaptor
	void CreateTreeAdaptor(ref ITreeAdaptor adaptor) {}

	private ITreeAdaptor adaptor;

	public ITreeAdaptor TreeAdaptor
	{
		get
		{
			return adaptor;
		}
		set
		{
			this.adaptor = value;
		}
	}

	public override string[] TokenNames { get { return PseudoBFParser.tokenNames; } }
	public override string GrammarFileName { get { return "D:\\Projects\\C#\\PseudoBF\\PseudoBF.Parsing\\PseudoBF.Parsing\\grammar\\PseudoBF.g"; } }



 	protected virtual void OnCreated() {}
	protected virtual void EnterRule(string ruleName, int ruleIndex) {}
	protected virtual void LeaveRule(string ruleName, int ruleIndex) {}

    public class program_return : ParserRuleReturnScope<IToken>, IAstRuleReturnScope<object>
    {
    	private object _tree;
    	public object Tree { get { return _tree; } set { _tree = value; } }
    }

    protected virtual void Enter_program() {}
    protected virtual void Leave_program() {}

    // $ANTLR start "program"
    // D:\\Projects\\C#\\PseudoBF\\PseudoBF.Parsing\\PseudoBF.Parsing\\grammar\\PseudoBF.g:34:8: public program : subroutines EOF -> ^( PROGRAM_IMAG subroutines ) ;
    [GrammarRule("program")]
    public PseudoBFParser.program_return program()
    {

        PseudoBFParser.program_return retval = new PseudoBFParser.program_return();
        retval.Start = (IToken)input.LT(1);

        object root_0 = null;

        IToken EOF2=null;
        PseudoBFParser.subroutines_return subroutines1 = default(PseudoBFParser.subroutines_return);

        object EOF2_tree=null;
        RewriteRuleITokenStream stream_EOF=new RewriteRuleITokenStream(adaptor,"token EOF");
        RewriteRuleSubtreeStream stream_subroutines=new RewriteRuleSubtreeStream(adaptor,"rule subroutines");
    	try { DebugEnterRule(GrammarFileName, "program");
    	DebugLocation(34, 63);
    	try
    	{
    		// D:\\Projects\\C#\\PseudoBF\\PseudoBF.Parsing\\PseudoBF.Parsing\\grammar\\PseudoBF.g:34:16: ( subroutines EOF -> ^( PROGRAM_IMAG subroutines ) )
    		DebugEnterAlt(1);
    		// D:\\Projects\\C#\\PseudoBF\\PseudoBF.Parsing\\PseudoBF.Parsing\\grammar\\PseudoBF.g:34:18: subroutines EOF
    		{
    		DebugLocation(34, 18);
    		PushFollow(Follow._subroutines_in_program136);
    		subroutines1=subroutines();
    		PopFollow();

    		stream_subroutines.Add(subroutines1.Tree);
    		DebugLocation(34, 30);
    		EOF2=(IToken)Match(input,EOF,Follow._EOF_in_program138);  
    		stream_EOF.Add(EOF2);



    		{
    		// AST REWRITE
    		// elements: subroutines
    		// token labels: 
    		// rule labels: retval
    		// token list labels: 
    		// rule list labels: 
    		// wildcard labels: 
    		retval.Tree = root_0;
    		RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.Tree:null);

    		root_0 = (object)adaptor.Nil();
    		// 34:34: -> ^( PROGRAM_IMAG subroutines )
    		{
    			DebugLocation(34, 37);
    			// D:\\Projects\\C#\\PseudoBF\\PseudoBF.Parsing\\PseudoBF.Parsing\\grammar\\PseudoBF.g:34:37: ^( PROGRAM_IMAG subroutines )
    			{
    			object root_1 = (object)adaptor.Nil();
    			DebugLocation(34, 39);
    			root_1 = (object)adaptor.BecomeRoot((object)adaptor.Create(PROGRAM_IMAG, "PROGRAM_IMAG"), root_1);

    			DebugLocation(34, 52);
    			adaptor.AddChild(root_1, stream_subroutines.NextTree());

    			adaptor.AddChild(root_0, root_1);
    			}

    		}

    		retval.Tree = root_0;
    		}

    		}

    		retval.Stop = (IToken)input.LT(-1);

    		retval.Tree = (object)adaptor.RulePostProcessing(root_0);
    		adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

    	}
    	catch (RecognitionException re)
    	{
    		ReportError(re);
    		Recover(input,re);
    	retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

    	}
    	finally
    	{
        }
     	DebugLocation(34, 63);
    	} finally { DebugExitRule(GrammarFileName, "program"); }
    	return retval;

    }
    // $ANTLR end "program"

    public class subroutines_return : ParserRuleReturnScope<IToken>, IAstRuleReturnScope<object>
    {
    	private object _tree;
    	public object Tree { get { return _tree; } set { _tree = value; } }
    }

    protected virtual void Enter_subroutines() {}
    protected virtual void Leave_subroutines() {}

    // $ANTLR start "subroutines"
    // D:\\Projects\\C#\\PseudoBF\\PseudoBF.Parsing\\PseudoBF.Parsing\\grammar\\PseudoBF.g:36:1: subroutines : ( subroutine )* ;
    [GrammarRule("subroutines")]
    private PseudoBFParser.subroutines_return subroutines()
    {

        PseudoBFParser.subroutines_return retval = new PseudoBFParser.subroutines_return();
        retval.Start = (IToken)input.LT(1);

        object root_0 = null;

        PseudoBFParser.subroutine_return subroutine3 = default(PseudoBFParser.subroutine_return);


    	try { DebugEnterRule(GrammarFileName, "subroutines");
    	DebugLocation(36, 14);
    	try
    	{
    		// D:\\Projects\\C#\\PseudoBF\\PseudoBF.Parsing\\PseudoBF.Parsing\\grammar\\PseudoBF.g:37:2: ( ( subroutine )* )
    		DebugEnterAlt(1);
    		// D:\\Projects\\C#\\PseudoBF\\PseudoBF.Parsing\\PseudoBF.Parsing\\grammar\\PseudoBF.g:37:4: ( subroutine )*
    		{
    		root_0 = (object)adaptor.Nil();

    		DebugLocation(37, 4);
    		// D:\\Projects\\C#\\PseudoBF\\PseudoBF.Parsing\\PseudoBF.Parsing\\grammar\\PseudoBF.g:37:4: ( subroutine )*
    		try { DebugEnterSubRule(1);
    		while (true)
    		{
    			int alt1=2;
    			try { DebugEnterDecision(1, decisionCanBacktrack[1]);
    			int LA1_0 = input.LA(1);

    			if (((LA1_0>=FUNCTION_KW && LA1_0<=PROCEDURE_KW)))
    			{
    				alt1=1;
    			}


    			} finally { DebugExitDecision(1); }
    			switch ( alt1 )
    			{
    			case 1:
    				DebugEnterAlt(1);
    				// D:\\Projects\\C#\\PseudoBF\\PseudoBF.Parsing\\PseudoBF.Parsing\\grammar\\PseudoBF.g:37:4: subroutine
    				{
    				DebugLocation(37, 4);
    				PushFollow(Follow._subroutine_in_subroutines155);
    				subroutine3=subroutine();
    				PopFollow();

    				adaptor.AddChild(root_0, subroutine3.Tree);

    				}
    				break;

    			default:
    				goto loop1;
    			}
    		}

    		loop1:
    			;

    		} finally { DebugExitSubRule(1); }


    		}

    		retval.Stop = (IToken)input.LT(-1);

    		retval.Tree = (object)adaptor.RulePostProcessing(root_0);
    		adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

    	}
    	catch (RecognitionException re)
    	{
    		ReportError(re);
    		Recover(input,re);
    	retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

    	}
    	finally
    	{
        }
     	DebugLocation(37, 14);
    	} finally { DebugExitRule(GrammarFileName, "subroutines"); }
    	return retval;

    }
    // $ANTLR end "subroutines"

    public class subroutine_return : ParserRuleReturnScope<IToken>, IAstRuleReturnScope<object>
    {
    	private object _tree;
    	public object Tree { get { return _tree; } set { _tree = value; } }
    }

    protected virtual void Enter_subroutine() {}
    protected virtual void Leave_subroutine() {}

    // $ANTLR start "subroutine"
    // D:\\Projects\\C#\\PseudoBF\\PseudoBF.Parsing\\PseudoBF.Parsing\\grammar\\PseudoBF.g:39:1: subroutine : subroutine_type ID variable_list locals_def code_block -> ^( SUBROUTINE_IMAG subroutine_type ID variable_list locals_def code_block ) ;
    [GrammarRule("subroutine")]
    private PseudoBFParser.subroutine_return subroutine()
    {

        PseudoBFParser.subroutine_return retval = new PseudoBFParser.subroutine_return();
        retval.Start = (IToken)input.LT(1);

        object root_0 = null;

        IToken ID5=null;
        PseudoBFParser.subroutine_type_return subroutine_type4 = default(PseudoBFParser.subroutine_type_return);
        PseudoBFParser.variable_list_return variable_list6 = default(PseudoBFParser.variable_list_return);
        PseudoBFParser.locals_def_return locals_def7 = default(PseudoBFParser.locals_def_return);
        PseudoBFParser.code_block_return code_block8 = default(PseudoBFParser.code_block_return);

        object ID5_tree=null;
        RewriteRuleITokenStream stream_ID=new RewriteRuleITokenStream(adaptor,"token ID");
        RewriteRuleSubtreeStream stream_variable_list=new RewriteRuleSubtreeStream(adaptor,"rule variable_list");
        RewriteRuleSubtreeStream stream_subroutine_type=new RewriteRuleSubtreeStream(adaptor,"rule subroutine_type");
        RewriteRuleSubtreeStream stream_code_block=new RewriteRuleSubtreeStream(adaptor,"rule code_block");
        RewriteRuleSubtreeStream stream_locals_def=new RewriteRuleSubtreeStream(adaptor,"rule locals_def");
    	try { DebugEnterRule(GrammarFileName, "subroutine");
    	DebugLocation(39, 78);
    	try
    	{
    		// D:\\Projects\\C#\\PseudoBF\\PseudoBF.Parsing\\PseudoBF.Parsing\\grammar\\PseudoBF.g:40:2: ( subroutine_type ID variable_list locals_def code_block -> ^( SUBROUTINE_IMAG subroutine_type ID variable_list locals_def code_block ) )
    		DebugEnterAlt(1);
    		// D:\\Projects\\C#\\PseudoBF\\PseudoBF.Parsing\\PseudoBF.Parsing\\grammar\\PseudoBF.g:40:4: subroutine_type ID variable_list locals_def code_block
    		{
    		DebugLocation(40, 4);
    		PushFollow(Follow._subroutine_type_in_subroutine165);
    		subroutine_type4=subroutine_type();
    		PopFollow();

    		stream_subroutine_type.Add(subroutine_type4.Tree);
    		DebugLocation(40, 20);
    		ID5=(IToken)Match(input,ID,Follow._ID_in_subroutine167);  
    		stream_ID.Add(ID5);

    		DebugLocation(40, 23);
    		PushFollow(Follow._variable_list_in_subroutine169);
    		variable_list6=variable_list();
    		PopFollow();

    		stream_variable_list.Add(variable_list6.Tree);
    		DebugLocation(40, 37);
    		PushFollow(Follow._locals_def_in_subroutine171);
    		locals_def7=locals_def();
    		PopFollow();

    		stream_locals_def.Add(locals_def7.Tree);
    		DebugLocation(40, 48);
    		PushFollow(Follow._code_block_in_subroutine173);
    		code_block8=code_block();
    		PopFollow();

    		stream_code_block.Add(code_block8.Tree);


    		{
    		// AST REWRITE
    		// elements: variable_list, ID, code_block, locals_def, subroutine_type
    		// token labels: 
    		// rule labels: retval
    		// token list labels: 
    		// rule list labels: 
    		// wildcard labels: 
    		retval.Tree = root_0;
    		RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.Tree:null);

    		root_0 = (object)adaptor.Nil();
    		// 41:3: -> ^( SUBROUTINE_IMAG subroutine_type ID variable_list locals_def code_block )
    		{
    			DebugLocation(41, 6);
    			// D:\\Projects\\C#\\PseudoBF\\PseudoBF.Parsing\\PseudoBF.Parsing\\grammar\\PseudoBF.g:41:6: ^( SUBROUTINE_IMAG subroutine_type ID variable_list locals_def code_block )
    			{
    			object root_1 = (object)adaptor.Nil();
    			DebugLocation(41, 8);
    			root_1 = (object)adaptor.BecomeRoot((object)adaptor.Create(SUBROUTINE_IMAG, "SUBROUTINE_IMAG"), root_1);

    			DebugLocation(41, 24);
    			adaptor.AddChild(root_1, stream_subroutine_type.NextTree());
    			DebugLocation(41, 40);
    			adaptor.AddChild(root_1, stream_ID.NextNode());
    			DebugLocation(41, 43);
    			adaptor.AddChild(root_1, stream_variable_list.NextTree());
    			DebugLocation(41, 57);
    			adaptor.AddChild(root_1, stream_locals_def.NextTree());
    			DebugLocation(41, 68);
    			adaptor.AddChild(root_1, stream_code_block.NextTree());

    			adaptor.AddChild(root_0, root_1);
    			}

    		}

    		retval.Tree = root_0;
    		}

    		}

    		retval.Stop = (IToken)input.LT(-1);

    		retval.Tree = (object)adaptor.RulePostProcessing(root_0);
    		adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

    	}
    	catch (RecognitionException re)
    	{
    		ReportError(re);
    		Recover(input,re);
    	retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

    	}
    	finally
    	{
        }
     	DebugLocation(41, 78);
    	} finally { DebugExitRule(GrammarFileName, "subroutine"); }
    	return retval;

    }
    // $ANTLR end "subroutine"

    public class subroutine_type_return : ParserRuleReturnScope<IToken>, IAstRuleReturnScope<object>
    {
    	private object _tree;
    	public object Tree { get { return _tree; } set { _tree = value; } }
    }

    protected virtual void Enter_subroutine_type() {}
    protected virtual void Leave_subroutine_type() {}

    // $ANTLR start "subroutine_type"
    // D:\\Projects\\C#\\PseudoBF\\PseudoBF.Parsing\\PseudoBF.Parsing\\grammar\\PseudoBF.g:43:1: subroutine_type : ( FUNCTION_KW | PROCEDURE_KW );
    [GrammarRule("subroutine_type")]
    private PseudoBFParser.subroutine_type_return subroutine_type()
    {

        PseudoBFParser.subroutine_type_return retval = new PseudoBFParser.subroutine_type_return();
        retval.Start = (IToken)input.LT(1);

        object root_0 = null;

        IToken set9=null;

        object set9_tree=null;

    	try { DebugEnterRule(GrammarFileName, "subroutine_type");
    	DebugLocation(43, 15);
    	try
    	{
    		// D:\\Projects\\C#\\PseudoBF\\PseudoBF.Parsing\\PseudoBF.Parsing\\grammar\\PseudoBF.g:44:2: ( FUNCTION_KW | PROCEDURE_KW )
    		DebugEnterAlt(1);
    		// D:\\Projects\\C#\\PseudoBF\\PseudoBF.Parsing\\PseudoBF.Parsing\\grammar\\PseudoBF.g:
    		{
    		root_0 = (object)adaptor.Nil();

    		DebugLocation(44, 2);
    		set9=(IToken)input.LT(1);
    		if ((input.LA(1)>=FUNCTION_KW && input.LA(1)<=PROCEDURE_KW))
    		{
    			input.Consume();
    			adaptor.AddChild(root_0, (object)adaptor.Create(set9));
    			state.errorRecovery=false;
    		}
    		else
    		{
    			MismatchedSetException mse = new MismatchedSetException(null,input);
    			DebugRecognitionException(mse);
    			throw mse;
    		}


    		}

    		retval.Stop = (IToken)input.LT(-1);

    		retval.Tree = (object)adaptor.RulePostProcessing(root_0);
    		adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

    	}
    	catch (RecognitionException re)
    	{
    		ReportError(re);
    		Recover(input,re);
    	retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

    	}
    	finally
    	{
        }
     	DebugLocation(45, 15);
    	} finally { DebugExitRule(GrammarFileName, "subroutine_type"); }
    	return retval;

    }
    // $ANTLR end "subroutine_type"

    public class variable_list_return : ParserRuleReturnScope<IToken>, IAstRuleReturnScope<object>
    {
    	private object _tree;
    	public object Tree { get { return _tree; } set { _tree = value; } }
    }

    protected virtual void Enter_variable_list() {}
    protected virtual void Leave_variable_list() {}

    // $ANTLR start "variable_list"
    // D:\\Projects\\C#\\PseudoBF\\PseudoBF.Parsing\\PseudoBF.Parsing\\grammar\\PseudoBF.g:47:1: variable_list : ( '(' ')' -> ^( VARS_IMAG ) | '(' ID ( ',' ID )* ')' -> ^( VARS_IMAG ( ID )+ ) );
    [GrammarRule("variable_list")]
    private PseudoBFParser.variable_list_return variable_list()
    {

        PseudoBFParser.variable_list_return retval = new PseudoBFParser.variable_list_return();
        retval.Start = (IToken)input.LT(1);

        object root_0 = null;

        IToken char_literal10=null;
        IToken char_literal11=null;
        IToken char_literal12=null;
        IToken ID13=null;
        IToken char_literal14=null;
        IToken ID15=null;
        IToken char_literal16=null;

        object char_literal10_tree=null;
        object char_literal11_tree=null;
        object char_literal12_tree=null;
        object ID13_tree=null;
        object char_literal14_tree=null;
        object ID15_tree=null;
        object char_literal16_tree=null;
        RewriteRuleITokenStream stream_40=new RewriteRuleITokenStream(adaptor,"token 40");
        RewriteRuleITokenStream stream_ID=new RewriteRuleITokenStream(adaptor,"token ID");
        RewriteRuleITokenStream stream_39=new RewriteRuleITokenStream(adaptor,"token 39");
        RewriteRuleITokenStream stream_38=new RewriteRuleITokenStream(adaptor,"token 38");

    	try { DebugEnterRule(GrammarFileName, "variable_list");
    	DebugLocation(47, 43);
    	try
    	{
    		// D:\\Projects\\C#\\PseudoBF\\PseudoBF.Parsing\\PseudoBF.Parsing\\grammar\\PseudoBF.g:47:14: ( '(' ')' -> ^( VARS_IMAG ) | '(' ID ( ',' ID )* ')' -> ^( VARS_IMAG ( ID )+ ) )
    		int alt3=2;
    		try { DebugEnterDecision(3, decisionCanBacktrack[3]);
    		int LA3_0 = input.LA(1);

    		if ((LA3_0==38))
    		{
    			int LA3_1 = input.LA(2);

    			if ((LA3_1==39))
    			{
    				alt3=1;
    			}
    			else if ((LA3_1==ID))
    			{
    				alt3=2;
    			}
    			else
    			{
    				NoViableAltException nvae = new NoViableAltException("", 3, 1, input);

    				DebugRecognitionException(nvae);
    				throw nvae;
    			}
    		}
    		else
    		{
    			NoViableAltException nvae = new NoViableAltException("", 3, 0, input);

    			DebugRecognitionException(nvae);
    			throw nvae;
    		}
    		} finally { DebugExitDecision(3); }
    		switch (alt3)
    		{
    		case 1:
    			DebugEnterAlt(1);
    			// D:\\Projects\\C#\\PseudoBF\\PseudoBF.Parsing\\PseudoBF.Parsing\\grammar\\PseudoBF.g:47:16: '(' ')'
    			{
    			DebugLocation(47, 16);
    			char_literal10=(IToken)Match(input,38,Follow._38_in_variable_list213);  
    			stream_38.Add(char_literal10);

    			DebugLocation(47, 20);
    			char_literal11=(IToken)Match(input,39,Follow._39_in_variable_list215);  
    			stream_39.Add(char_literal11);



    			{
    			// AST REWRITE
    			// elements: 
    			// token labels: 
    			// rule labels: retval
    			// token list labels: 
    			// rule list labels: 
    			// wildcard labels: 
    			retval.Tree = root_0;
    			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.Tree:null);

    			root_0 = (object)adaptor.Nil();
    			// 47:24: -> ^( VARS_IMAG )
    			{
    				DebugLocation(47, 27);
    				// D:\\Projects\\C#\\PseudoBF\\PseudoBF.Parsing\\PseudoBF.Parsing\\grammar\\PseudoBF.g:47:27: ^( VARS_IMAG )
    				{
    				object root_1 = (object)adaptor.Nil();
    				DebugLocation(47, 29);
    				root_1 = (object)adaptor.BecomeRoot((object)adaptor.Create(VARS_IMAG, "VARS_IMAG"), root_1);

    				adaptor.AddChild(root_0, root_1);
    				}

    			}

    			retval.Tree = root_0;
    			}

    			}
    			break;
    		case 2:
    			DebugEnterAlt(2);
    			// D:\\Projects\\C#\\PseudoBF\\PseudoBF.Parsing\\PseudoBF.Parsing\\grammar\\PseudoBF.g:48:4: '(' ID ( ',' ID )* ')'
    			{
    			DebugLocation(48, 4);
    			char_literal12=(IToken)Match(input,38,Follow._38_in_variable_list226);  
    			stream_38.Add(char_literal12);

    			DebugLocation(48, 8);
    			ID13=(IToken)Match(input,ID,Follow._ID_in_variable_list228);  
    			stream_ID.Add(ID13);

    			DebugLocation(48, 11);
    			// D:\\Projects\\C#\\PseudoBF\\PseudoBF.Parsing\\PseudoBF.Parsing\\grammar\\PseudoBF.g:48:11: ( ',' ID )*
    			try { DebugEnterSubRule(2);
    			while (true)
    			{
    				int alt2=2;
    				try { DebugEnterDecision(2, decisionCanBacktrack[2]);
    				int LA2_0 = input.LA(1);

    				if ((LA2_0==40))
    				{
    					alt2=1;
    				}


    				} finally { DebugExitDecision(2); }
    				switch ( alt2 )
    				{
    				case 1:
    					DebugEnterAlt(1);
    					// D:\\Projects\\C#\\PseudoBF\\PseudoBF.Parsing\\PseudoBF.Parsing\\grammar\\PseudoBF.g:48:12: ',' ID
    					{
    					DebugLocation(48, 12);
    					char_literal14=(IToken)Match(input,40,Follow._40_in_variable_list231);  
    					stream_40.Add(char_literal14);

    					DebugLocation(48, 16);
    					ID15=(IToken)Match(input,ID,Follow._ID_in_variable_list233);  
    					stream_ID.Add(ID15);


    					}
    					break;

    				default:
    					goto loop2;
    				}
    			}

    			loop2:
    				;

    			} finally { DebugExitSubRule(2); }

    			DebugLocation(48, 21);
    			char_literal16=(IToken)Match(input,39,Follow._39_in_variable_list237);  
    			stream_39.Add(char_literal16);



    			{
    			// AST REWRITE
    			// elements: ID
    			// token labels: 
    			// rule labels: retval
    			// token list labels: 
    			// rule list labels: 
    			// wildcard labels: 
    			retval.Tree = root_0;
    			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.Tree:null);

    			root_0 = (object)adaptor.Nil();
    			// 48:25: -> ^( VARS_IMAG ( ID )+ )
    			{
    				DebugLocation(48, 28);
    				// D:\\Projects\\C#\\PseudoBF\\PseudoBF.Parsing\\PseudoBF.Parsing\\grammar\\PseudoBF.g:48:28: ^( VARS_IMAG ( ID )+ )
    				{
    				object root_1 = (object)adaptor.Nil();
    				DebugLocation(48, 30);
    				root_1 = (object)adaptor.BecomeRoot((object)adaptor.Create(VARS_IMAG, "VARS_IMAG"), root_1);

    				DebugLocation(48, 40);
    				if ( !(stream_ID.HasNext) )
    				{
    					throw new RewriteEarlyExitException();
    				}
    				while ( stream_ID.HasNext )
    				{
    					DebugLocation(48, 40);
    					adaptor.AddChild(root_1, stream_ID.NextNode());

    				}
    				stream_ID.Reset();

    				adaptor.AddChild(root_0, root_1);
    				}

    			}

    			retval.Tree = root_0;
    			}

    			}
    			break;

    		}
    		retval.Stop = (IToken)input.LT(-1);

    		retval.Tree = (object)adaptor.RulePostProcessing(root_0);
    		adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

    	}
    	catch (RecognitionException re)
    	{
    		ReportError(re);
    		Recover(input,re);
    	retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

    	}
    	finally
    	{
        }
     	DebugLocation(48, 43);
    	} finally { DebugExitRule(GrammarFileName, "variable_list"); }
    	return retval;

    }
    // $ANTLR end "variable_list"

    public class value_list_return : ParserRuleReturnScope<IToken>, IAstRuleReturnScope<object>
    {
    	private object _tree;
    	public object Tree { get { return _tree; } set { _tree = value; } }
    }

    protected virtual void Enter_value_list() {}
    protected virtual void Leave_value_list() {}

    // $ANTLR start "value_list"
    // D:\\Projects\\C#\\PseudoBF\\PseudoBF.Parsing\\PseudoBF.Parsing\\grammar\\PseudoBF.g:50:1: value_list : ( '(' ')' -> ^( VALUES_IMAG ) | '(' value ( ',' value )* ')' -> ^( VALUES_IMAG ( value )+ ) );
    [GrammarRule("value_list")]
    private PseudoBFParser.value_list_return value_list()
    {

        PseudoBFParser.value_list_return retval = new PseudoBFParser.value_list_return();
        retval.Start = (IToken)input.LT(1);

        object root_0 = null;

        IToken char_literal17=null;
        IToken char_literal18=null;
        IToken char_literal19=null;
        IToken char_literal21=null;
        IToken char_literal23=null;
        PseudoBFParser.value_return value20 = default(PseudoBFParser.value_return);
        PseudoBFParser.value_return value22 = default(PseudoBFParser.value_return);
